remove reset-css doubleups

--- a/reset.scss
+++ b/reset.scss
@@ -23,21 +23,9 @@ body {
     overflow-y: scroll;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-}
-
-p {
-    margin: 0;
-}
-
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 img:not([width]),
@@ -57,17 +45,7 @@ img {
     display: block;
 }
 
-ul,
-ol {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
 table {
-    border-collapse: collapse;
-    font-feature-settings: "kern", "liga", "tnum";
-    margin: 0;
     width: 100%;
 }
 
@@ -75,8 +53,4 @@ button,
 input,
 textarea {
     font-family: inherit;
-}
-
-iframe {
-    border: 0;
 }
